# react-native-keyboard-controller

./: .eslintrc.cjs  .gitignore  .prettierignore  404.html  Bag.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO  TODO.md  app.plugin.js  blog.html  chart.py  cspell.json  data.ts  data2.ts  data3.ts  data4.ts  data5.ts  data6.ts  drop-effect.html  index.html  jestSetup.js  kb.html  llms-full.txt  llms.txt  markdown-page.html  package.json  react-native-keyboard-controller.podspec  react-native-keyboard-events.podspec  react-native.config.js  sitemap.xml  table.md  tea.yaml  tsconfig.build.json  tsconfig.json
android/: .editorconfig  CMakeLists.txt  build.gradle  cpp-adapter.cpp  detekt.yml  gradle.properties  gradlew  gradlew.bat  react-native-helpers.gradle
android/src/base/java/com/reactnativekeyboardcontroller/: KeyboardControllerPackage.kt
android/src/fabric/java/com/reactnativekeyboardcontroller/: ClippingScrollViewDecoratorViewManager.kt  CustomKeyboardViewManager.kt  KeyboardBackgroundViewManager.kt  KeyboardControllerModule.kt  (+7 more)
android/src/main/: AndroidManifest.xml
android/src/main/jni/: Android.mk  CMakeLists.txt  KeyboardControllerComponentsRegistry.cpp  KeyboardControllerComponentsRegistry.h  OnLoad.cpp  RNKC.h  keyboardcontroller.h  reactnativekeyboardcontroller.cpp  reactnativekeyboardcontroller.h  rnkc.h
android/src/main/res/values/: attrs.xml  colors.xml
android/src/main/res/values-v29/: colors.xml
android/src/main/res/values-v30/: colors.xml
android/src/main/res/values-v33/: colors.xml
android/src/main/res/values-v34/: colors.xml
android/src/main/res/values-v35/: colors.xml
(+152656 files in other folders)
